--- a/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
@@ -142,31 +142,31 @@
         android:layout_weight="1"
         android:layout_width="match_parent"/>
 </TableRow>
-<TableRow
-    android:layout_marginLeft="30sp"
-    android:layout_marginRight="30sp">
+
 
     <Button
         android:id="@+id/add_me_ads_button"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-
-        android:padding="5dp"
-        android:text="Add Me"
+        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="200dp"
+        android:layout_marginRight="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/add_me"
         android:textColor="#008000" />
 
     <Button
         android:id="@+id/let_me_see_textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="200dp"
+        android:layout_marginRight="200dp"
         android:layout_gravity="start"
-        android:layout_weight="4"
         android:text="@string/address_textView"
         android:textColor="#008000"
         android:textStyle="italic" />
 
-</TableRow>
+
 
     <ListView
 
