--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -146,15 +146,18 @@
                     android:inputType="number"
                     />
         </TableRow>
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">>
+
+
                 <Button
                     android:id="@+id/confirm_ads_creation_button"
-                    android:layout_weight="1"
+                    style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+                    android:layout_marginTop="10dp"
                     android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:text="@string/confirm_ads_creation_button"/>
-        </TableRow>
+                    android:layout_marginRight="200dp"
+                    android:textAlignment="center"
+                    android:textSize="18dp"
+                    android:text="@string/confirm_ads_creation_button"
+                    android:layout_marginLeft="200dp"
+                    android:textColor="#008000" />
+
 </TableLayout>
