--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
@@ -5,22 +5,20 @@
     android:padding="10sp"
     android:orientation="vertical">
 
-    <TableRow>
 
-        <TextView android:layout_weight="28" />
+    <Button
+        android:id="@+id/ripristina"
+        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+        android:layout_width="351dp"
+        android:layout_height="25dp"
+        android:layout_gravity="right"
+        android:text="@string/restore_all"
+        android:textAlignment="center"
+        android:textColor="#008000"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:visibility="visible" />
 
-        <Button
-            android:id="@+id/ripristina"
-            android:layout_weight="1"
-            android:textAlignment="textEnd"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginRight="15sp"
-            android:text="@string/restore_all"
-            android:textColor="#008000"
-            android:textSize="15sp"
-            android:textStyle="italic" />
-    </TableRow>
 
     <TableRow android:layout_marginTop="15sp">
 
