--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_settings.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/login_background">
 
-</LinearLayout>
+    <TableRow
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="modifica e_mail : "
+            android:textAlignment="textEnd"
+            android:textColor="#fff"
+            android:textSize="22dp" />
+
+        <EditText
+            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="textEmailAddress"
+            android:hint="email"
+            android:textColor="#008000" />
+
+
+
+    </TableRow>
+
+
+    <Button
+        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="200dp"
+        android:layout_marginRight="200dp"
+        android:text="applica "
+        android:textColor="#008000"/>
+
+    <TableRow
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="modifica password : "
+            android:textColor="#fff"
+            android:textSize="22dp" />
+
+        <Button
+            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="modifica password "
+            android:textColor="#008000" />
+    </TableRow>
+
+    <TableRow
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="elimina account : "
+            android:textColor="#fff"
+            android:textSize="22dp" />
+
+        <Button
+            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Elimina account "
+            android:textColor="#008000" />/>
+    </TableRow>
+
+</TableLayout>
