--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
@@ -66,7 +66,15 @@
 
         <SeekBar
             android:id="@+id/seekBarDistance"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:progress="10"
+            android:max="100"/>
+
+        <TextView
+            android:id="@+id/percent_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/percentage"/>
 
     </TableRow>
 
