--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -33,7 +33,7 @@
             android:text="@string/item_creator_who_plays"
             android:textSize="18sp"
             android:textStyle="italic"
-            android:textColor="#0FFF"
+            android:textColor="#FFF"
             />
     </TableRow>
 </TableLayout>
