--- a/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
@@ -171,6 +171,8 @@
         android:layout_height="wrap_content"
         android:text="@string/player_added"
         android:textSize="20sp"
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"
         android:layout_marginBottom="3sp"
         android:layout_marginTop="8sp"
         android:textColor="#FFF"/>
