--- a/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
@@ -17,6 +17,7 @@
             android:textSize="22dp" />
 
         <EditText
+            android:id="@+id/edit_text_oldpass"
             style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,6 +40,7 @@
             android:textSize="22dp" />
 
         <EditText
+            android:id="@+id/edit_text_newpass"
             style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,6 +53,7 @@
     </TableRow>
 
     <Button
+        android:id="@+id/button_newpass"
         style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
