--- a/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
@@ -55,6 +55,7 @@
     <Button
         android:id="@+id/button_newpass"
         style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="200dp"
