--- a/TESI/WhoPlays/app/src/main/res/menu/activity_who_plays_drawer.xml
+++ b/TESI/WhoPlays/app/src/main/res/menu/activity_who_plays_drawer.xml
@@ -6,12 +6,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home"
-            android:icon="@drawable/ic_launcher_background"
+            android:icon="@drawable/home2"
             android:title="@string/home" />
         <item
-            android:id="@+id/my_team"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/myTeam" />
+            android:id="@+id/my_info"
+            android:icon="@drawable/pawn"
+            android:title="@string/myInfo" />
         <item
             android:id="@+id/messages"
             android:icon="@drawable/ic_menu_gallery"
