--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -9,7 +9,8 @@
         android:id="@+id/title_list_ads"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="26sp"
+        android:textColor="#FFF"
         android:layout_marginBottom="2sp"
         android:text="@string/title_list_ads"/>
 
