--- a/TESI/WhoPlays/app/src/main/res/layout-w600dp/fragment_settings.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout-w600dp/fragment_settings.xml
@@ -5,8 +5,8 @@
     android:background="@drawable/login_background">
 
     <TableRow
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="40dp">
 
 
@@ -16,7 +16,7 @@
             android:layout_weight="2"
             android:text="modifica password : "
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="22dp" />
 
         <Button
             android:id="@+id/button_modifica_password"
@@ -29,22 +29,23 @@
     </TableRow>
 
     <TableRow
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp">
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="30dp">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:text="elimina account : "
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="22dp" />
 
         <Button
             android:id="@+id/button_elimina_account"
             style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:text="Elimina account "
             android:textColor="#008000" />/>
     </TableRow>
