--- a/TESI/WhoPlays/app/src/main/res/layout-w600dp/activity_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout-w600dp/activity_find_player.xml
@@ -106,7 +106,6 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:textColor="#FFF"
-
             android:textSize="22dp" />
 
         <TextView
@@ -122,6 +121,7 @@
         android:id="@+id/time_ads"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_weight="1"
         />
 </TableRow>
 <TableRow android:layout_marginLeft="30sp"
