--- a/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
@@ -20,43 +20,45 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TableRow android:layout_marginTop="30sp"
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp">
+    <TableRow android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <TextView
             android:textColor="#FFF"
-            android:textSize="22dp"
+            android:textSize="18dp"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="@string/creator_textView"
             />
 
         <TextView
-            android:textSize="22dp"
+            android:textSize="18dp"
             android:textColor="#FFF"
             android:id="@+id/creator_textView"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_weight="1"
+            android:maxLines="1"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
             />
     </TableRow>
     <TableRow
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <TextView
-            android:textSize="22dp"
+            android:textSize="18dp"
             android:textColor="#FFF"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:text="@string/match_type"
+            android:text="@string/type_of_match_home"
             />
 
         <TextView
-            android:textSize="22dp"
+            android:textSize="18dp"
             android:textColor="#FFF"
             android:id="@+id/type_of_match_ads"
             android:layout_height="match_parent"
@@ -66,68 +68,85 @@
 
     </TableRow>
     <TableRow
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <TextView
-            android:layout_width="121dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/place_textView"
             android:textColor="#FFF"
-            android:textSize="22dp" />
+            android:textSize="18dp" />
 
-        <TextView
-            android:textSize="22dp"
-            android:textColor="#FFF"
-            android:id="@+id/place_ads"
+        <HorizontalScrollView
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1">
+
+
+            <TextView
+                android:textSize="18dp"
+                android:textColor="#FFF"
+                android:id="@+id/place_ads"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
+                />
+        </HorizontalScrollView>
+
 
 
     </TableRow>
     <TableRow
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0"
+            android:layout_weight="1"
             android:text="@string/date_textView"
-
             android:textColor="#FFF"
-            android:textSize="22dp" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/date_ads"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:textColor="#FFF"
-
-            android:textSize="22dp" />
+            android:textSize="18dp" />
+    </TableRow>
+    <TableRow
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/time_textView"
+            android:layout_weight="1"
             android:textColor="#FFF"
-            android:textSize="22dp" />
+            android:textSize="18dp" />
 
+        <TextView
+            android:textSize="18dp"
+            android:textColor="#FFF"
+            android:id="@+id/time_ads"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            />
+    </TableRow>
+
+<TableRow android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp">
     <TextView
-        android:textSize="22dp"
-        android:textColor="#FFF"
-        android:id="@+id/time_ads"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        />
-</TableRow>
-<TableRow android:layout_marginLeft="30sp"
-    android:layout_marginRight="30sp">
-    <TextView
-        android:textSize="22dp"
+        android:textSize="18dp"
         android:textColor="#FFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -135,7 +154,7 @@
         android:text="@string/number_of_player_ads"/>
 
     <TextView
-        android:textSize="22dp"
+        android:textSize="18dp"
         android:textColor="#FFF"
         android:id="@+id/number_of_player_ads"
         android:layout_height="match_parent"
@@ -152,7 +171,8 @@
         android:layout_marginRight="15dp"
         android:layout_height="wrap_content"
         android:text="@string/add_me"
-        android:textColor="#008000" />
+        android:textColor="#008000"
+        />
 
     <Button
         android:id="@+id/let_me_see_textView"
@@ -170,17 +190,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/player_added"
-        android:textSize="20sp"
-        android:layout_marginLeft="15sp"
-        android:layout_marginRight="15sp"
-        android:layout_marginBottom="3sp"
-        android:layout_marginTop="8sp"
+        android:textSize="20dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="8dp"
         android:textColor="#FFF"/>
 
     <ListView
 
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="40sp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="40dp"
             android:layout_weight="1"
             android:divider="#FFF"
             android:dividerHeight="3dp"
