--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -1,39 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+
     >
 
-    <TableRow>
-        <TextView
-            android:id="@+id/itemTypeWhoPlaysTextView"
-            android:layout_span="3"
-            android:text="@string/item_type_who_plays"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:textColor="#FFF"
-            />
-    </TableRow>
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="581dp"
+        android:layout_height="85dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
+        card_view:cardBackgroundColor="#589E48"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="15dp"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.54"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent">
 
-    <TableRow>
-        <TextView
-            android:id="@+id/itemPlaceWhoPlaysTextView"
-            android:text="@string/item_place_who_plays"
-            android:textSize="15sp"
-            android:textColor="#FFF"
-            />
-        <TextView
-            android:id="@+id/itemDateWhoPlaysTextView"
-            android:text="@string/item_date_who_plays"
-            android:textSize="15sp"
-            android:textColor="#FFF"
-            />
-        <TextView
-            android:id="@+id/itemCreatorWhoPlaysTextView"
-            android:text="@string/item_creator_who_plays"
-            android:textSize="15sp"
-            android:textStyle="italic"
-            android:textColor="#FFF"
-            />
-    </TableRow>
-</TableLayout>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/itemPlaceWhoPlaysTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/item_place_who_plays"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/itemTypeWhoPlaysTextView" />
+
+            <TextView
+                android:id="@+id/itemCreatorWhoPlaysTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/item_creator_who_plays"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/itemTypeWhoPlaysTextView"
+                tools:layout_editor_absoluteX="218dp" />
+
+            <TextView
+                android:id="@+id/itemDateWhoPlaysTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/item_date_who_plays"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toStartOf="@+id/itemCreatorWhoPlaysTextView"
+                card_view:layout_constraintHorizontal_bias="0.333"
+                card_view:layout_constraintStart_toEndOf="@+id/itemPlaceWhoPlaysTextView"
+                card_view:layout_constraintTop_toBottomOf="@+id/itemTypeWhoPlaysTextView" />
+
+            <TextView
+                android:id="@+id/itemTypeWhoPlaysTextView"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_span="3"
+                android:layout_weight="1"
+                android:text="@string/item_type_who_plays"
+                android:textColor="#FFF"
+                android:textSize="28sp"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
+
+</android.support.constraint.ConstraintLayout>
