--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -10,82 +10,83 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="581dp"
-        android:layout_height="85dp"
+        android:layout_width="353dp"
+        android:layout_height="87dp"
         android:layout_gravity="center"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="4dp"
         android:visibility="visible"
         card_view:cardBackgroundColor="#589E48"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="15dp"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.54"
+        card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:minHeight="@dimen/cardview_default_elevation"
+            android:minWidth="@dimen/cardview_default_radius">
 
             <TextView
                 android:id="@+id/itemPlaceWhoPlaysTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/item_place_who_plays"
                 android:textColor="#FFF"
                 android:textSize="18sp"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/itemTypeWhoPlaysTextView" />
+                card_view:layout_constraintBaseline_toBaselineOf="@+id/itemDateWhoPlaysTextView"
+                card_view:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/itemCreatorWhoPlaysTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="22dp"
+                android:layout_marginEnd="36dp"
                 android:text="@string/item_creator_who_plays"
                 android:textColor="#FFF"
                 android:textSize="18sp"
                 android:textStyle="italic"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/itemTypeWhoPlaysTextView"
-                tools:layout_editor_absoluteX="218dp" />
+                card_view:layout_constraintBaseline_toBaselineOf="@+id/itemDateWhoPlaysTextView"
+                card_view:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/itemDateWhoPlaysTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_width="77dp"
+                android:layout_height="24dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
                 android:text="@string/item_date_who_plays"
                 android:textColor="#FFF"
                 android:textSize="18sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toStartOf="@+id/itemCreatorWhoPlaysTextView"
-                card_view:layout_constraintHorizontal_bias="0.333"
-                card_view:layout_constraintStart_toEndOf="@+id/itemPlaceWhoPlaysTextView"
-                card_view:layout_constraintTop_toBottomOf="@+id/itemTypeWhoPlaysTextView" />
+                card_view:layout_constraintHorizontal_bias="0.357"
+                card_view:layout_constraintStart_toEndOf="@+id/itemPlaceWhoPlaysTextView" />
 
             <TextView
                 android:id="@+id/itemTypeWhoPlaysTextView"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
+                android:layout_width="326dp"
+                android:layout_height="42dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_span="3"
                 android:layout_weight="1"
                 android:text="@string/item_type_who_plays"
                 android:textColor="#FFF"
-                android:textSize="28sp"
+                android:textSize="20sp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintHorizontal_bias="0.421"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent" />
+                card_view:layout_constraintTop_toTopOf="parent"
+                card_view:layout_constraintVertical_bias="0.0" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
