--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -10,10 +10,10 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="353dp"
+        android:layout_width="match_parent"
         android:layout_height="87dp"
         android:layout_gravity="center"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="4dp"
         android:visibility="visible"
@@ -71,10 +71,10 @@
 
             <TextView
                 android:id="@+id/itemTypeWhoPlaysTextView"
-                android:layout_width="326dp"
+                android:layout_width="match_parent"
                 android:layout_height="42dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_span="3"
                 android:layout_weight="1"
