--- a/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
@@ -1,67 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background">
+    android:background="#589E48">
 
-    <TableRow
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="inserire vecchia password:"
-            android:textColor="#fff"
-            android:textSize="22dp" />
-
-        <EditText
-            android:id="@+id/edit_text_oldpass"
-            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="textPassword"
-            android:hint="vecchia password" />
-
-
-
-    </TableRow>
-    <TableRow
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="inserire nuova password:"
-            android:textColor="#fff"
-            android:textSize="22dp" />
-
-        <EditText
-            android:id="@+id/edit_text_newpass"
-            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="textPassword"
-            android:hint="nuova password" />
-
-
-
-    </TableRow>
 
     <Button
         android:id="@+id/button_newpass"
         style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
-        android:clickable="true"
-        android:layout_width="wrap_content"
+        android:layout_width="88dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textAlignment="center"
+        android:layout_marginBottom="124dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
         android:text="applica "
-        android:textColor="#008000"/>
+        android:textAlignment="center"
+        android:textColor="#589E48"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_newpass" />
 
-</TableLayout>
+
+    <EditText
+        android:id="@+id/edit_text_oldpass"
+        android:layout_width="294dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="76dp"
+        android:ems="10"
+        android:hint="Inserisci vecchia passowrd"
+        android:inputType="textPassword"
+        android:textColor="#FFF"
+        android:textColorHint="#FFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edit_text_newpass"
+        android:layout_width="294dp"
+        android:layout_height="62dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
+        android:ems="10"
+        android:hint="Inserisci nuova password"
+        android:inputType="textPassword"
+        android:textColor="#FFF"
+        android:textColorHint="#FFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_oldpass" />
+
+</android.support.constraint.ConstraintLayout>
