--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -37,7 +37,7 @@
                 android:layout_height="25dp"
                 android:layout_marginStart="16dp"
                 android:text="@string/item_place_who_plays"
-                android:textColor="#589E48"
+                android:textColor="#68AC61"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 card_view:layout_constraintBaseline_toBaselineOf="@+id/itemDateWhoPlaysTextView"
@@ -49,7 +49,7 @@
                 android:layout_height="22dp"
                 android:layout_marginEnd="36dp"
                 android:text="@string/item_creator_who_plays"
-                android:textColor="#589E48"
+                android:textColor="#68AC61"
                 android:textSize="18sp"
                 android:textStyle="italic|bold"
                 card_view:layout_constraintBaseline_toBaselineOf="@+id/itemDateWhoPlaysTextView"
@@ -63,7 +63,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:text="@string/item_date_who_plays"
-                android:textColor="#589E48"
+                android:textColor="#68AC61"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 card_view:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +81,7 @@
                 android:layout_span="3"
                 android:layout_weight="1"
                 android:text="@string/item_type_who_plays"
-                android:textColor="#589E48"
+                android:textColor="#68AC61"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
