--- a/TESI/WhoPlays/app/src/main/res/layout/app_bar_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/app_bar_who_plays.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#589E48"
+            android:background="#68AC61"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="#68AC61"
         app:srcCompat="@drawable/add" />
 
 </android.support.design.widget.CoordinatorLayout>
