--- a/TESI/WhoPlays/app/src/main/res/layout/activity_choice_type_match.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_choice_type_match.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/text_view_choice_type_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
